Changed the font on the header and ensure the header is visible while scrolling through the website.

--- a/resume.css
+++ b/resume.css
@@ -16,7 +16,7 @@ section ul a {
     top: 0;
     left: 0;
     right: 0;
-    position: relative;
+    position: fixed;
     background-color: rgb(0, 0, 0);
     margin: 0;
 }
@@ -24,7 +24,7 @@ section ul a {
 nav a {
     margin-right: 300px;
     font-size: 35px;
-    font-family: 'DM Serif Text', serif;
+    font-family: 'New Amsterdam', serif;
     color: rgb(225, 225, 225);
     text-decoration: none;
     line-height: 1.5;
